# ChangeLog for app-admin/puppet
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/puppet/ChangeLog,v 1.174 2013/10/02 02:47:03 jer Exp $

  02 Oct 2013; Jeroen Roovers <jer@gentoo.org> puppet-3.2.4.ebuild:
  Stable for HPPA (bug #486002).

  17 Sep 2013; Matthew Thode <prometheanfire@gentoo.org> puppet-3.3.0.ebuild:
  adding sparc keyword to 3.3.0 cause jmorgan said I could :D

  17 Sep 2013; Jack Morgan <jmorgan@gentoo.org> puppet-3.2.4.ebuild:
  ~sparc wrt bz 449184

*puppet-3.3.0 (16 Sep 2013)

  16 Sep 2013; Matthew Thode <prometheanfire@gentoo.org> +puppet-3.3.0.ebuild,
  -puppet-3.1.1-r3.ebuild:
  verbump of puppet to 3.3.0

  27 Aug 2013; Chris Reffett <creffett@gentoo.org> -puppet-2.7.22.ebuild:
  Drop insecure version wrt cleanup for security bug 481186. ACK by
  prometheanfire.

  21 Aug 2013; Jack Morgan <jmorgan@gentoo.org> puppet-2.7.23.ebuild:
  sparc stable wrt #481186

  19 Aug 2013; Agostino Sarubbo <ago@gentoo.org> puppet-2.7.23.ebuild:
  Stable for ppc, wrt bug #481186

  17 Aug 2013; Jeroen Roovers <jer@gentoo.org> puppet-2.7.23.ebuild:
  Stable for HPPA (bug #481186).

  16 Aug 2013; Agostino Sarubbo <ago@gentoo.org> puppet-2.7.23.ebuild:
  Stable for x86, wrt bug #481186

  16 Aug 2013; Agostino Sarubbo <ago@gentoo.org> puppet-2.7.23.ebuild:
  Stable for amd64, wrt bug #481186

  16 Aug 2013; Matthew Thode <prometheanfire@gentoo.org>
  +files/50puppet-mode-gentoo.el:
  readded file that I inadvertently removed bug 481214

*puppet-2.7.23 (15 Aug 2013)
*puppet-3.2.4 (15 Aug 2013)

  15 Aug 2013; Matthew Thode <prometheanfire@gentoo.org> +puppet-2.7.23.ebuild,
  +puppet-3.2.4.ebuild, -files/50puppet-mode-gentoo.el,
  -files/puppet-2.7.18-eix_fix.patch, -files/puppet.init-CVE-2012-6120,
  -files/puppetmaster-2.7.6.confd, -files/puppetmaster-2.7.6.init,
  -files/puppetmaster-2.7.6.init-CVE-2012-6120, -puppet-2.7.21-r1.ebuild,