@@ -11,15 +11,17 @@ AUX puppetmaster.init-r1 920 SHA256 00a66031624de13e28b43c186765c36f02632a614b86
 DIST puppet-2.7.23.tar.gz 2025639 SHA256 73bc0d5a2334dc484148141a32274703b65b78bf87ca41f7e2da1c38518ba490 SHA512 d6173b596744b438a132a3772ed39195670d509481b5fbd30b098e8df3fceb31097369e6670587303b490f35842a39955d77ad500ab88535d43f08cc8d9dc86c WHIRLPOOL 65164214bc421b78359858258fa1e4242161ec406a20d73e5f44a5b14e74a6ed5973fcd4cd752a8817698aee8840ce67b92b12dfe487f964a736a68ae158ae80
 DIST puppet-3.2.4.tar.gz 1786216 SHA256 8b38f4adee6237b8dd7b1956d90af97f2d0091245d6e30b708bbc8e333001358 SHA512 31a22cf926c6fe866e7ed1ca294dd78228bfb34b0465d44cc985dc6f737879710b5c27e1519f53c9fd9622320386950f290d774d709559b66be79e43dac1dd5e WHIRLPOOL 86bb44bd6ee5a4c31892e909a95fcea52ced289b891281bae5535dac891006d9c1a5d4613210a0ba550ab6428f206dcf9ab3fafb3c90297a64e8bad3c06509be
 DIST puppet-3.3.0.tar.gz 1894901 SHA256 72a8579332b379f8dfe03d39ac961891db9d1e41919be98ac64caa0e3e2d31a0 SHA512 806bfd76d58a3abb7d717e1a4f46f0569e61aa92bc9961c7e2b314669849865c74907c93b4455d4ed0f0eb9ec88ec02f8f2c83a6821549b590c86797c99cac7a WHIRLPOOL 4b10f7c6054cf547496165b24589f15b13fc0bd8db8b4f710725605fbf1a50f7b8b77453e0a16e5f0e290fc04727997de6bbd5d94dc495175d999508099edf43
+DIST puppet-3.3.1.tar.gz 1896023 SHA256 152f9eaa6767c5f6cbd52befff891bd54e074d2f6487a649373da0113c09e284 SHA512 323dcd31a7029439edb3663501bce11fe7aa75b80efbd133abb82ea2c1584ce395a70ad2203f52d4fda8cadf18db7d6f6f2d4a3b285fa69b19b930d46e85a2d4 WHIRLPOOL a6d4b97efd5859b89d5fc81a857ecf837da540f140f33a252e552306843164e94cd94e0ca10b6bcfa3310fc0c03db9d2908100ed8f6c58d0c49ab5970202d01c
 EBUILD puppet-2.7.23.ebuild 4819 SHA256 2dd746a070446e53ce9b62aff8ef28d9b2906f3ed1673f085a5e0c0f2cd7adef SHA512 4db1abf2648378c164bab5d0a5a9925c16bef561acbef1c2ebd27fccc2f2336ca9096d40184a6d6d835621afac4c4c7365d4aa721ed6e3d626cd6e7d0b92e3ab WHIRLPOOL 41f1c00ddda305c758c5ee6c4e4a977b2f8ec0dc4d9ed6b7c55ba13dfebe502d58bf626f2c3d1c13380ec48433c30e9a6c14d77cdb5581bfec9932c809d392d0
 EBUILD puppet-3.2.4.ebuild 4293 SHA256 17474b5af7b47cdab276f143f071a0bd875d94f6beee0c01abfaed3ae7f0b929 SHA512 291ec73e518bd58dcead6aad6dd59508e7f3236f2d778adf36c512d085025ecf13daa5d4f44e62361397b8ce40106430e17fd248d676d72fc42c94e445105794 WHIRLPOOL 842f047f62af9b7ee735449b51170071a27b12acd0b534aa89f1edaaa2d3357ae37d7bb33b30c0dadcba96cbaf417f8f1796d1267f5594618b53cdb516be1821
 EBUILD puppet-3.3.0.ebuild 4306 SHA256 f1709a18b379ba87e7efecaa40ca5cf9282554b685d27ca3228a2244c3260adf SHA512 3efd09d67f0efeeabc3419902257374cca2da54827afb2d3f1468116e925d981f7aa6de56f857100631e8062925e96912762597c3e84900d3309b5f92d4cabb3 WHIRLPOOL 63aab9a2d75436e599528ecb266d9d5105cc2b401ded72bc848e771b314c3bf501c8f3bfa0cd39085dc059e2c634a9e99fdf8cc755e50406b913a11da329a374
-MISC ChangeLog 28432 SHA256 096c48246d48492dc4c4814422b18cef2d20c56b734798d1a6412b6be85b49a2 SHA512 135599d223b1f308ba4b9990262c1eb9ced55f40abbd4d1881c6083a5781776565fd4bbbc44ba5a0e3ed957877edd2eee4e49dba68508bac1afa525c17ab47ba WHIRLPOOL 46da204c6bd8ca5820fedb4c35124002fcde0f3e7cae2d4c8ed403e554ba5ec866b423d96da51d941d577c991686caa36d89531685aadbb8d0a66fb9ba51c7f4
+EBUILD puppet-3.3.1.ebuild 4356 SHA256 84007fdb75e368d8d2d65156217b957b046c4d8827125eee3f1f2c1e40006b0c SHA512 e8e944920c7c03da1a3ff91bd74ab641a80c5d667b354822da995a36dd08d2e822e56ef2fd3103ca89219ca8aac678817e80c743b06f5236b2f65efe5cd082db WHIRLPOOL 8fdb34cf31c2ef6d8f6d68fd391971921cbe0bf481cb5ae1ce66b324f4747869b4702a1098e512bc902c667c7df648a5c6059c125020c4cfc8fa2d029a44e390
+MISC ChangeLog 28612 SHA256 98718c65eda82085c48d00d80a00757001fb4d4066997fe6c260ce7e8af8ebb1 SHA512 b831e1d560c6e1c7d41538b2408adac1abf722c2b139c2d76ed9047bd01e37d28f51bd42f1f9fe513e43792f3e48e64b107b5409e76667888ca8b9330843121d WHIRLPOOL 91d96c193e885ad27cdd2610bb4d0eee27170125dfc37d0437eda65b573f038ca1e4b7cd716b7c7b31fe8f787a66d1c41f9da53fed04a09b76a13536edcca106
 MISC metadata.xml 1178 SHA256 a2bacb8f1f7fe8ea72ecea2729a55402fdff8e88082295b8f27a96077328f83b SHA512 90c5f30845403e8eb5e2218617892d5cfd149deacea62c1ba8533a8773ff79d2e7f4d4b9ffea666237494e0f51fd02cba290d000902aa9811c39be4d8c564952 WHIRLPOOL c7067fd67fc94cdf4fb044428b9142019ef3ef9cb591b5354bc3da6604d54ad68eeb1388f19df40293e1a521f311dd5e447305a03a9a769afb1c96949f8cbe92
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlJLiSgACgkQVWmRsqeSphOupACfch3OvsFgGQXGZaxCvV4d+vJQ
-wIwAn28SkwFqjuem6ZAm0sksxPJDEScD
-=9b0c
+iEYEAREIAAYFAlJZJ4YACgkQjDdoMVfcAHgL/ACg6nczfldhYnDEgPj5cL1jmm4l
+FLgAnjhM4YsPVO+WGdhc/06v963cYv7i
+=NYaE
 -----END PGP SIGNATURE-----
